LoginScreen/style.css
@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);

:root {
	--text: #54fe55;
	--error: #fe5454;
	--background: #000000;
	--selection: #1a4f1a;
}

*,
*:focus {
	outline: none;
}

html,
body {
	margin: 0;
	background: var(--background);
	color: var(--text);
	font-family: 'Press Start 2P';
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 100vh;
	width: 100vw;
}

#wrapper,
label,
button span {
	transition: all 0.5s cubic-bezier(0.6, 0, 0.4, 1);
}

#wrapper {
	overflow: hidden;
}

#loginForm {
	transform: translateY(-120px);
}

#loginForm.signin #wrapper {
	height: 171px;
}

#loginForm.signup #wrapper {
	/* height: 255px; */
	height: 428px;
	/* height: 510px; */
}

#loginForm.verify #wrapper {
	/* height: 86px; */
	height: 171px;
}

#loginForm.reset #wrapper {
	height: 85px;
}

#loginForm.signin button span {
	transform: translate3d(0, -72px, 0);
}

#loginForm.signup button span {
	transform: translate3d(0, -144px, 0);
}

#loginForm.verify button span {
	transform: translate3d(0, -216px, 0);
}

#loginForm.reset button span {
	transform: translate3d(0, 0, 0);
}

form {
	width: 450px;
	height: 370px;
}

input[type='radio'] {
	display: none;
}

#labels,
.radio-container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: relative;
}

label {
	cursor: pointer;
	font-size: 18px;
	text-transform: uppercase;
	text-shadow: 0 0 10px var(--text);
	margin-bottom: 20px;
}

input[type='text'],
input[type='password'] {
	font-family: 'Press Start 2P', cursive;
	background: var(--background);
	border: 1px solid var(--text);
	color: var(--text);
	text-shadow: 0 0 10px var(--text);
	box-shadow: 0 0 5px var(--text);
	font-size: 18px;
	height: 72px;
	width: 443px;
	margin-bottom: 10px;
	text-indent: 20px;
	transition: all 0.2s ease-in-out;
}

input::placeholder {
	color: var(--text);
}

button {
	background: var(--selection);
	color: var(--text);
	border: 0;
	text-shadow: 0 0 10px var(--text);
	box-shadow: 0 0 10px var(--selection);
	font-family: 'Press Start 2P', cursive;
	cursor: pointer;
	font-size: 22px;
	height: 72px;
	width: 100%;
	overflow: hidden;
	transition: all 0.3s cubic-bezier(0.6, 0, 0.4, 1);
}

button span {
	display: block;
	line-height: 72px;
	position: relative;
	transform: translate3d(0, 0, 0);
}

select {
	font-family: 'Press Start 2P', cursive;
	background: var(--background);
	border: 1px solid var(--text);
	color: var(--text);
	text-shadow: 0 0 10px var(--text);
	box-shadow: 0 0 5px var(--text);
	font-size: 18px;
	height: 72px;
	width: 100%;
	margin-bottom: 10px;
	text-indent: 20px;
	transition: all 0.2s ease-in-out;

	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
}

.welcome {
	font-size: 1.2em;
	width: 450px;
	transition: all 0.3s cubic-bezier(0.6, 0, 0.4, 1);
	margin-bottom: 50px;
	transform: translateY(-120px);
}

.hidden {
	display: none;
}

.hide {
	visibility: hidden;
}

#line {
	height: 3px;
	background: var(--text);
	position: absolute;
	bottom: 0px;
	transition: all 0.3s ease;
}

.error-message {
	color: var(--error, #fe5454);
	margin-top: 20px;
}

/* CRT effects */
@keyframes flicker {
	0% {
		opacity: 0.27861;
	}
	5% {
		opacity: 0.34769;
	}
	10% {
		opacity: 0.23604;
	}
	15% {
		opacity: 0.90626;
	}
	20% {
		opacity: 0.18128;
	}
	25% {
		opacity: 0.83891;
	}
	30% {
		opacity: 0.65583;
	}
	35% {
		opacity: 0.67807;
	}
	40% {
		opacity: 0.26559;
	}
	45% {
		opacity: 0.84693;
	}
	50% {
		opacity: 0.96019;
	}
	55% {
		opacity: 0.08594;
	}
	60% {
		opacity: 0.20313;
	}
	65% {
		opacity: 0.71988;
	}
	70% {
		opacity: 0.53455;
	}
	75% {
		opacity: 0.37288;
	}
	80% {
		opacity: 0.71428;
	}
	85% {
		opacity: 0.70419;
	}
	90% {
		opacity: 0.7003;
	}
	95% {
		opacity: 0.36108;
	}
	100% {
		opacity: 0.24387;
	}
}
@keyframes textShadow {
	0% {
		text-shadow: 0.4389924193300864px 0 1px rgba(0, 30, 255, 0.5),
			-0.4389924193300864px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	5% {
		text-shadow: 2.7928974010788217px 0 1px rgba(0, 30, 255, 0.5),
			-2.7928974010788217px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	10% {
		text-shadow: 0.02956275843481219px 0 1px rgba(0, 30, 255, 0.5),
			-0.02956275843481219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	15% {
		text-shadow: 0.40218538552878136px 0 1px rgba(0, 30, 255, 0.5),
			-0.40218538552878136px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	20% {
		text-shadow: 3.4794037899852017px 0 1px rgba(0, 30, 255, 0.5),
			-3.4794037899852017px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	25% {
		text-shadow: 1.6125630401149584px 0 1px rgba(0, 30, 255, 0.5),
			-1.6125630401149584px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	30% {
		text-shadow: 0.7015590085143956px 0 1px rgba(0, 30, 255, 0.5),
			-0.7015590085143956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	35% {
		text-shadow: 3.896914047650351px 0 1px rgba(0, 30, 255, 0.5),
			-3.896914047650351px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	40% {
		text-shadow: 3.870905614848819px 0 1px rgba(0, 30, 255, 0.5),
			-3.870905614848819px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	45% {
		text-shadow: 2.231056963361899px 0 1px rgba(0, 30, 255, 0.5),
			-2.231056963361899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	50% {
		text-shadow: 0.08084290417898504px 0 1px rgba(0, 30, 255, 0.5),
			-0.08084290417898504px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	55% {
		text-shadow: 2.3758461067427543px 0 1px rgba(0, 30, 255, 0.5),
			-2.3758461067427543px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	60% {
		text-shadow: 2.202193051050636px 0 1px rgba(0, 30, 255, 0.5),
			-2.202193051050636px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	65% {
		text-shadow: 2.8638780614874975px 0 1px rgba(0, 30, 255, 0.5),
			-2.8638780614874975px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	70% {
		text-shadow: 0.48874025155497314px 0 1px rgba(0, 30, 255, 0.5),
			-0.48874025155497314px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	75% {
		text-shadow: 1.8948491305757957px 0 1px rgba(0, 30, 255, 0.5),
			-1.8948491305757957px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	80% {
		text-shadow: 0.0833037308038857px 0 1px rgba(0, 30, 255, 0.5),
			-0.0833037308038857px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	85% {
		text-shadow: 0.09769827255241735px 0 1px rgba(0, 30, 255, 0.5),
			-0.09769827255241735px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	90% {
		text-shadow: 3.443339761481782px 0 1px rgba(0, 30, 255, 0.5),
			-3.443339761481782px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	95% {
		text-shadow: 2.1841838852799786px 0 1px rgba(0, 30, 255, 0.5),
			-2.1841838852799786px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
	100% {
		text-shadow: 2.6208764473832513px 0 1px rgba(0, 30, 255, 0.5),
			-2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
	}
}
.crt::after {
	content: ' ';
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: rgba(18, 16, 16, 0.1);
	opacity: 0;
	z-index: 2;
	pointer-events: none;
	animation: flicker 0.15s infinite;
}
.crt::before {
	content: ' ';
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
		linear-gradient(
			90deg,
			rgba(255, 0, 0, 0.06),
			rgba(0, 255, 0, 0.02),
			rgba(0, 0, 255, 0.06)
		);
	z-index: 2;
	background-size: 100% 2px, 3px 100%;
	pointer-events: none;
}
.crt {
	animation: textShadow 1.6s infinite;
}

